--- a/firebase/public/note-app.html
+++ b/firebase/public/note-app.html
@@ -1,8 +1,16 @@
 <dom-module id="note-app">
-  <template>Hello, note app!</template>
+  <template>
+    <style include="note-app-shared-styles"> </style>
+    <na-toolbar></na-toolbar>
+    <na-login></na-login>
+  </template>
   <script>
     Polymer({
       is: "note-app"
     });
   </script>
 </dom-module>
+
+<link rel="import" href="bower_components/note-app-elements/na-elements.html">
+<link rel="import" href="bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html">
+<link rel="import" href="bower_components/polymerfire/polymerfire.html">
